<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_column="0"
        app:layout_row="0" />

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noSize"
        app:layout_column="0"
        app:layout_row="1" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noWeight"
        app:layout_column="0"
        app:layout_row="2" />

    <TextView
        android:id="@+id/calculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noCalculation"
        app:layout_column="0"
        app:layout_row="3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:onClick="changeSize"
        android:text="@string/changeSize"
        app:layout_column="1"
        app:layout_row="1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeWeight"
        android:text="@string/changeWeight"
        app:layout_column="1"
        app:layout_row="2" />
</android.support.v7.widget.GridLayout>
